# test-selenium

./: Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
