[tool.poetry]
name = "test-selenium-not-connected-to-DevTools"
version = "0.0.1"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
chromedriver-binary = "<=121.0.6167.85.0"
selenium = "4.9.1"
psutil = "^5.9.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
include = '\.py$'
exclude = '''

(
  /(
    migrations
  )/
)
'''
